--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,10 @@
   "manifest_version": 3,
   "name": "Moodle Vocab Helper",
   "description": "Détecte des mots espagnols sur Moodle et affiche leur traduction en français.",
-  "version": "1.0.1",
+  "version": "2.0.0",
+  "icons": {
+    "128": "icon.svg"
+  },
   "permissions": [
     "activeTab"
   ],
